--- a/secciones/portfolio/teatro/aisa/index.html
+++ b/secciones/portfolio/teatro/aisa/index.html
@@ -59,7 +59,7 @@
     <br>
 
     <h2 class="titulo-principal">Fotografía de Teatro</h2>  
-    <h3 class="titulo-de-obra">NOCHE CON AISA</h3>
+    <h3 class="titulo-de-obra">Noche con Aisa</h3>
 
   
     <div class="container">
