cambios en el menú
letter-spacing + bold

--- a/secciones/portfolio/teatro/index.html
+++ b/secciones/portfolio/teatro/index.html
@@ -65,7 +65,7 @@
             <div class="col">
             <div class="card">
                 <a href="biodrag/index.html">
-                    <img src="" alt="Biodrag" class="card-img-top">
+                    <img src="https://i.ibb.co/b5zGPKk/biodrag-caratula-horizontal.jpg" alt="Biodrag" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
                     <h5 class="card-title">Biodrag</h5>
