--- a/secciones/portfolio/teatro/lucy/index.html
+++ b/secciones/portfolio/teatro/lucy/index.html
@@ -87,8 +87,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/QM8gfgc/lucy5.jpg"   > </a> 
-                                                                                                                        <!-- CAMBIAR A HORIZONTAL -->         
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/tL4DfZz/lucy5.jpg"   > </a>        
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
