arreglo menu  icon mobile

--- a/secciones/portfolio/teatro/gala/index.html
+++ b/secciones/portfolio/teatro/gala/index.html
@@ -20,9 +20,9 @@
         <img src="../../../../imagenes/header-teatro.jpg" width="100%">
     </div>
     
-    <nav class="navbar navbar-expand-lg navbar fixed" style="background-color: #783172; letter-spacing: 0.5pt;" aria-label="Tenth navbar example">
+    <nav class="navbar navbar-expand-lg navbar fixed" style="background-color: #783172; letter-spacing: 1pt; font-weight: bold;" aria-label="Tenth navbar example">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
   
@@ -335,7 +335,7 @@
       
           <ul class="nav col-md-4 justify-content-end d-flex">
             <a class= "icono" href="mailto:irenfaraci@gmail.com"><img src="../../../../imagenes/mail-01.svg" alt="mail" width="30"></a>
-            <a class= "icono" href="https://wa.me/5491135731697" target="_blank"><img src="../../../../imagenes/whatsapp-01.svg" alt="whatsapp" width="30"></a>
+            <a class= "icono" href="https://wa.me/5491135731697/?text=Hola%20Iren!%20Quisiera%20consultarte%20por" target="_blank"><img src="../../../../imagenes/whatsapp-01.svg" alt="whatsapp" width="30"></a>
             <a class= "icono" href="https://www.instagram.com/irenfaraci/?hl=es" target="_blank"><img src="../../../../imagenes/instagram-01.svg" alt="instagram" width="30"></a>
             <a class= "icono" href="https://www.linkedin.com/in/irene-faraci-b03a43224" target="_blank"><img src="../../../../imagenes/linkedin-01.svg" alt="linkedin" width="30"></a>
           </ul>
