--- a/secciones/portfolio/teatro/gala/index.html
+++ b/secciones/portfolio/teatro/gala/index.html
@@ -327,10 +327,7 @@
   <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
           <div class="col-md-4 d-flex align-items-center">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-            </a>
-            <span style="color: #FFF;">&copy; 2022 Irene Faraci Fotografía</span>
+            <span class="copyright" style="color: #FFF;">&copy; 2022 Irene Faraci Fotografía</span>
           </div>
       
           <ul class="nav col-md-4 justify-content-end d-flex">
