--- a/secciones/portfolio/documental/index.html
+++ b/secciones/portfolio/documental/index.html
@@ -20,9 +20,9 @@
     <div>
         <img src="../../../imagenes/header-documental.jpg" width="100%"> 
     </div>
-    <nav class="navbar navbar-expand-lg navbar fixed" style="background-color: #783172; letter-spacing: 1pt; font-weight: bold;" aria-label="Tenth navbar example">
+    <nav class="navbar-dark navbar-expand-lg navbar fixed" style="background-color: #783172; letter-spacing: 1pt; font-weight: bold;" aria-label="Tenth navbar example">
       <div class="container-fluid">
-        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
   
