--- a/secciones/portfolio/retratos/mascotas/index.html
+++ b/secciones/portfolio/retratos/mascotas/index.html
@@ -20,9 +20,9 @@
         <img src="../../../../imagenes/header-retrato.jpg" width="100%">
     </div>
     
-    <nav class="navbar navbar-expand-lg navbar fixed" style="background-color: #783172; letter-spacing: 1pt; font-weight: bold;" aria-label="Tenth navbar example">
+    <nav class="navbar-dark navbar-expand-lg navbar fixed" style="background-color: #783172; letter-spacing: 1pt; font-weight: bold;" aria-label="Tenth navbar example">
       <div class="container-fluid">
-        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-togglert" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
   
@@ -106,7 +106,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/d0YkvFm/mascota9.jpg"> </a>            
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img class="foto" src="https://i.ibb.co/d0YkvFm/mascota9.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
