ajuste iconos redes
se achicaron para la vista mobile

--- a/secciones/portfolio/teatro/palabras/index.html
+++ b/secciones/portfolio/teatro/palabras/index.html
@@ -187,10 +187,10 @@
           </div>
       
           <ul class="nav col-md-4 justify-content-end d-flex">
-            <a class= "icono" href="mailto:irenfaraci@gmail.com"><img src="../../../../imagenes/mail-01.svg" alt="mail" width="30"></a>
-            <a class= "icono" href="https://wa.me/5491135731697/?text=Hola%20Iren!%20Quisiera%20consultarte%20por" target="_blank"><img src="../../../../imagenes/whatsapp-01.svg" alt="whatsapp" width="30"></a>
-            <a class= "icono" href="https://www.instagram.com/irenfaraci/?hl=es" target="_blank"><img src="../../../../imagenes/instagram-01.svg" alt="instagram" width="30"></a>
-            <a class= "icono" href="https://www.linkedin.com/in/irene-faraci-b03a43224" target="_blank"><img src="../../../../imagenes/linkedin-01.svg" alt="linkedin" width="30"></a>
+            <a class= "icono" href="mailto:irenfaraci@gmail.com"><img class="icono-img" src="../../../../imagenes/mail-01.svg" alt="mail"></a>
+            <a class= "icono" href="https://wa.me/5491135731697/?text=Hola%20Iren!%20Quisiera%20consultarte%20por" target="_blank"><img class="icono-img" src="../../../../imagenes/whatsapp-01.svg" alt="whatsapp"></a>
+            <a class= "icono" href="https://www.instagram.com/irenfaraci/?hl=es" target="_blank"><img class="icono-img" src="../../../../imagenes/instagram-01.svg" alt="instagram"></a>
+            <a class= "icono" href="https://www.linkedin.com/in/irene-faraci-b03a43224" target="_blank"><img class="icono-img" src="../../../../imagenes/linkedin-01.svg" alt="linkedin"></a>
           </ul>
         </footer>
     </div>
