--- a/secciones/contacto/index.html
+++ b/secciones/contacto/index.html
@@ -70,20 +70,20 @@
                       Si estás interesado/a en mi trabajo, tenés alguna consulta o querés pedir un presupuesto, sentite libre de contactarme por cualquiera de estos medios.  
                     </p>
                     
-                    <div class="container-flui">
+                    <div class="container">
                       <div class="row">
-                        <div class="col-6 d-flex justify-content-center" style="color: #FFF;">
+                        <div class="col-lg-6  col-sm-12 d-flex justify-content-center" style="color: #FFF;">
                           <img class="icono-contacto" src="../../imagenes/mail-01.svg" width="20"> irenfaraci@gmail.com</div>
-                        <div class="col-6 d-flex justify-content-center" style="color: #FFF;">
+                        <div class="col-lg-6 col-sm-12 d-flex justify-content-center" style="color: #FFF;">
                           <img class="icono-contacto" src="../../imagenes/whatsapp-01.svg" width="20">+54 9 11 3573 1697</div>
                       </div>
                     </div>
                     <br>
-                    <div class="container-fluid">
+                    <div class="container">
                       <div class="row">
-                        <div class="col-6 d-flex justify-content-center" style="color: #FFF;">
+                        <div class="col-lg-6 col-sm-12 d-flex justify-content-center" style="color: #FFF;">
                           <img class="icono-contacto" src="../../imagenes/instagram-01.svg" width="20">@irenfaraci</div>
-                        <div class="col-6 d-flex justify-content-center" style="color: #FFF;">
+                        <div class="col-lg-6 col-sm-12 d-flex justify-content-center" style="color: #FFF;">
                           <img class="icono-contacto" src="../../imagenes/linkedin-01.svg" width="20">Irene Faraci</div>
                       </div>
                     </div>
