cambio menú index

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 </head>
 
 <body class="bg-dark">
-    <!-- MENÚ -->
+    <!-- HEADER -->
     <div>
-        <img src="imagenes/header-index.jpg" width="100%"> <!--Acá iría el logo 1500x150-->
+        <img src="imagenes/header-index.jpg" width="100%"> 
     </div>
 
+    <!-- MENÚ -->
     <nav class="navbar-dark navbar-expand-lg navbar fixed" style="background-color: #783172; letter-spacing: 1pt; font-weight: bold;" aria-label="Tenth navbar example">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,14 +38,14 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" style="color: #FFF;" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   PORTFOLIO
                 </a>
-                <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/documental/index.html">Documental</a></li>
-                  <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/eventos/index.html">Eventos</a></li>
-                  <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
-                  <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/producto/index.html">Fotografía de Producto</a></li>
-                  <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/teatro/index.html">Fotografía de Teatro</a></li>
-                  <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/fotoperiodismo/index.html">Fotoperiodismo</a></li>
-                  <li><a class="dropdown-item" style="color: #B55EBC" href="secciones/portfolio/retratos/index.html">Retratos</a></li>
+                <ul class="dropdown-menu" style="background-color: #783172;" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/documental/index.html">Documental</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/eventos/index.html">Eventos</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/producto/index.html">Fotografía de Producto</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/teatro/index.html">Fotografía de Teatro</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/fotoperiodismo/index.html">Fotoperiodismo</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/retratos/index.html">Retratos</a></li>
                 </ul>
                 </li>
                 <li class="nav-item"><a href="secciones/contacto/index.html" class="nav-link" style="color: #FFF;">CONTACTO</a></li>
