--- a/secciones/portfolio/teatro/jorobado/index.html
+++ b/secciones/portfolio/teatro/jorobado/index.html
@@ -59,7 +59,7 @@
     <br>
 
     <h2 class="titulo-principal">Fotografía de Teatro</h2>  
-    <h3 class="titulo-de-obra">El jorobado de París</h3>
+    <h3 class="titulo-de-obra">El Jorobado de París</h3>
  
 
   
