links agregados sección contacto

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" style="color: #FFF;" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   PORTFOLIO
                 </a>
-                <ul class="dropdown-menu" style="background-color: #783172;" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/documental/index.html">Documental</a></li>
-                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/eventos/index.html">Eventos</a></li>
-                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
-                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/producto/index.html">Fotografía de Producto</a></li>
-                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/teatro/index.html">Fotografía de Teatro</a></li>
-                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/fotoperiodismo/index.html">Fotoperiodismo</a></li>
-                  <li><a class="dropdown-item" style="color: #FFF" href="secciones/portfolio/retratos/index.html">Retratos</a></li>
+                <ul class="dropdown-menu" style="background-color: #783172; " aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/documental/index.html">Documental</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/eventos/index.html">Eventos</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/producto/index.html">Fotografía de Producto</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/teatro/index.html">Fotografía de Teatro</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/fotoperiodismo/index.html">Fotoperiodismo</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/retratos/index.html">Retratos</a></li>
                 </ul>
                 </li>
                 <li class="nav-item"><a href="secciones/contacto/index.html" class="nav-link" style="color: #FFF;">CONTACTO</a></li>
