--- a/secciones/contacto/index.html
+++ b/secciones/contacto/index.html
@@ -74,9 +74,14 @@
                     <div class="container">
                       <div class="row">
                         <div id="icono-container" class="col-lg-6  col-sm-6 d-flex justify-content-center" style="color: #FFF;">
-                          <img class="icono-contacto" src="../../imagenes/mail-01.svg" width="20"> irenfaraci@gmail.com</div>
+                          <a class= "icono" href="mailto:irenfaraci@gmail.com">
+                            <img class="icono-contacto" src="../../imagenes/mail-01.svg" width="20"> irenfaraci@gmail.com
+                          </a></div>
                         <div id="icono-container" class="col-lg-6 col-sm-6 d-flex justify-content-center" style="color: #FFF;">
-                          <img class="icono-contacto" src="../../imagenes/whatsapp-01.svg" width="20">+54 9 11 3573 1697</div>
+                          <a class= "icono" href="https://wa.me/5491135731697/?text=Hola%20Iren!%20Quisiera%20consultarte%20por" target="_blank">
+                            <img class="icono-contacto" src="../../imagenes/whatsapp-01.svg" width="20">+54 9 11 3573 1697
+                          </a>
+                        </div>
                       </div>
                     </div>
                     <br>
@@ -84,9 +89,15 @@
                     <div class="container">
                       <div class="row">
                         <div id="icono-container" class="col-lg-6 col-sm-6 d-flex justify-content-center" style="color: #FFF;">
-                          <img class="icono-contacto" src="../../imagenes/instagram-01.svg" width="20">@irenfaraci</div>
+                          <a class= "icono" href="https://www.instagram.com/irenfaraci/?hl=es" target="_blank">
+                            <img class="icono-contacto" src="../../imagenes/instagram-01.svg" width="20">@irenfaraci
+                          </a>
+                        </div>
                         <div id="icono-container" class="col-lg-6 col-sm-6 d-flex justify-content-center" style="color: #FFF;">
-                          <img class="icono-contacto" src="../../imagenes/linkedin-01.svg" width="20">Irene Faraci</div>
+                          <a class= "icono" href="https://www.linkedin.com/in/irene-faraci-b03a43224">
+                            <img class="icono-contacto" src="../../imagenes/linkedin-01.svg" width="20">Irene Faraci
+                          </a>
+                        </div>
                       </div>
                     </div>
                     
