--- a/index.html
+++ b/index.html
@@ -62,39 +62,19 @@
             <div class="row" ">
                 <div class="col-12">
                     <p class="bio"> 
-                        Hago lo que hago, principalmente, porque disfruto mucho de la fotografía. Me motiva mucho saber que puedo transmitir emociones con mis fotos.
+                        Nací en una familia de docentes, pero lo mío siempre fue el arte. A los 10 años jugaba con una cámara de fotos volviendo loca a toda la familia, un juego que de a poco fue determinando una forma de vida. Fue mi hobby por muchos años, mientras trabajaba en lugares relacionados con el arte y lo social.
                     </p>
-                    <p class="bio">    
-                        La fotografía es mi cable a tierra, mi mejor modo de expresarme, contar cómo veo el mundo y lo que me rodea.
-                    </p>
-                    <p class="bio">
-                        Nací en una familia de docentes, pero lo mío siempre fue el arte. A los 8 años comencé a estudiar flauta traversa, también 
-                        estudié dibujo y pintura y desde los 10 años jugaba con una cámara de fotos volviendo loca a toda la familia, un juego que 
-                        de a poco fue determinando una forma de vida. Fue mi hobby por muchos años, mientras, trabajé en distintas áreas, lugares siempre 
-                        relacionados con el arte y lo social.
+                    <p class="bio">  
+                        Actualmente me dedico exclusivamente a la fotografía. Soy, en definitiva, una agradecida de la vida por hacer lo que más me gusta ¡y poder compartirlo!
                     </p>
                     <p class="bio">
-                        Desde el 2017 comencé a estudiar fotografía en varios lugares, siempre buscando la mejor capacitación. Actualmente me dedico 
-                        exclusivamente a hacer lo que más me gusta y disfruto cada vez más. Soy, en definitiva, una agradecida de la vida por hacer lo que 
-                        más me gusta… y sobretodo poder compartirlo!
+                        Realizo fotografía de producto, eventos sociales, deportiva y retratos, aunque la fotografía de artes escénicas es lo que más me conmueve, es ahí donde todos mis sentidos y emociones se alinean. Busco las situaciones espontáneas y naturales, sin dirigir ni forzar nada.
                     </p>
                     <p class="bio">
-                        Realizo fotografía de producto, gastronómica, eventos sociales, amo hacer fotografía de deportes, retratos y lo que más me conmueve es 
-                        hacer fotografía de artes escénicas, es ahí donde todos mis sentidos y  emociones se alinean, es por eso que me esfuerzo tanto por captar 
-                        cada instante. Ese es mi trabajo y agradezco poder hacerlo.
+                        Mientras todo fluye, hago foco en que mis fotos capten esos instantes únicos y decisivos. Lo que van a recordar y lo que querrán revivir. Lo que los emocionó, lo que sintieron y lo que pasó mientras vivían a pleno un momento irrepetible, sin preocuparse por nada más.
                     </p>
-                    <p class="bio">
-                        Trabajo principalmente sobre las situaciones espontáneas y naturales, sin dirigir ni forzar nada, pero atenta a aquello que sólo sucede una 
-                        vez… aquello conmovedor, real y muy significativo.
-                    </p>
-                    <p class="bio">
-                        Mientras todo fluye, busco que mis fotos capten esos instantes únicos y decisivos. Lo que van a recordar y lo que querrán revivir. Lo que los 
-                        emocionó, lo que sintieron y lo que pasó mientras vivían a pleno un momento irrepetible, sin preocuparse por nada más.
-                    </p>
-                    <p class="bio">
-                        Quiero que mis fotos sean vivas, que despierten un recuerdo, que revivan un momento. Y de esa manera formar parte de una pequeña historia, de 
-                        tu historia, que será un placer poder contar.
-                    </p>
+                    
+                    
                 </div>
             </div>
         </div>
