--- a/secciones/portfolio/producto/rolon/index.html
+++ b/secciones/portfolio/producto/rolon/index.html
@@ -65,32 +65,32 @@
     <div class="container">
       <hr>
         <div class="row g-3">
-          <div class="col-lg-4 col-md-4 col-sm-6">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <div class="thumbnail img-responsive">
               <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/rwqrRsh/rolon-caratula.jpg" > </a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <div class="thumbnail img-responsive">
               <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/dLxCPKh/rolon1.jpg" > </a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6 ">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 ">
             <div class="thumbnail">
               <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/fdrLKkX/rolon2.jpg" > </a>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <div class="thumbnail img-responsive">
               <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/bPXp369/rolon3.jpg" > </a>            
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <div class="thumbnail img-responsive">
               <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/TrzZSrL/rolon4.jpg" > </a>            
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
+          <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <div class="thumbnail img-responsive">
               <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/cw1k7bN/rolon5.jpg"> </a>            
             </div>
