--- a/secciones/portfolio/producto/rolon/index.html
+++ b/secciones/portfolio/producto/rolon/index.html
@@ -62,9 +62,9 @@
     <h3 class="titulo-de-obra">Rolón</h3> 
  
   
-    <div class="container">
+    <div class="container style="width: 100%;">
       <hr>
-        <div class="row g-3">
+        <div class="row">
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <div class="thumbnail img-responsive">
               <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/rwqrRsh/rolon-caratula.jpg" > </a>
