cambio hover portfolio

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   PORTFOLIO
                 </a>
                 <ul class="dropdown-menu" style="background-color: #783172; " aria-labelledby="navbarDropdownMenuLink">
-                  <li class="dropdown-bg"><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/documental/index.html">Documental</a></li>
+                  <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/documental/index.html">Documental</a></li>
                   <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/eventos/index.html">Eventos</a></li>
                   <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
                   <li><a class="dropdown-item" style="color: #FFF;" href="secciones/portfolio/producto/index.html">Fotografía de Producto</a></li>
