--- a/secciones/portfolio/deportiva/index.html
+++ b/secciones/portfolio/deportiva/index.html
@@ -36,14 +36,14 @@
               <a class="nav-link dropdown-toggle" id="current" href="#" id="navbarDropdownMenuLink" style="color: #FFF" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 PORTFOLIO
               </a>
-              <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" style="color: #B55EBC" href="../../portfolio/documental/index.html">Documental</a></li>
-                <li><a class="dropdown-item" style="color: #B55EBC" href="../../portfolio/eventos/index.html">Eventos</a></li>
-                <li><a class="dropdown-item" style="color: #B55EBC" href="../../portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
-                <li><a class="dropdown-item" style="color: #B55EBC" href="../../portfolio/producto/index.html">Fotografía de Producto</a></li>
-                <li><a class="dropdown-item" style="color: #B55EBC" href="../../portfolio/teatro/index.html">Fotografía de Teatro</a></li>
-                <li><a class="dropdown-item" style="color: #B55EBC" href="../../portfolio/fotoperiodismo/index.html">Fotoperiodismo</a></li>
-                <li><a class="dropdown-item" style="color: #B55EBC" href="../../portfolio/retratos/index.html">Retratos</a></li>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #783172;">
+                <li><a class="dropdown-item" style="color: #FFF" href="../../portfolio/documental/index.html">Documental</a></li>
+                <li><a class="dropdown-item" style="color: #FFF" href="../../portfolio/eventos/index.html">Eventos</a></li>
+                <li><a class="dropdown-item" style="color: #FFF" href="../../portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
+                <li><a class="dropdown-item" style="color: #FFF" href="../../portfolio/producto/index.html">Fotografía de Producto</a></li>
+                <li><a class="dropdown-item" style="color: #FFF" href="../../portfolio/teatro/index.html">Fotografía de Teatro</a></li>
+                <li><a class="dropdown-item" style="color: #FFF" href="../../portfolio/fotoperiodismo/index.html">Fotoperiodismo</a></li>
+                <li><a class="dropdown-item" style="color: #FFF" href="../../portfolio/retratos/index.html">Retratos</a></li>
               </ul>
               </li>
               <li class="nav-item"><a href="../../contacto/index.html" class="nav-link" style="color: #FFF;">CONTACTO</a></li>
