sacar menu icon de mascotas

--- a/secciones/portfolio/retratos/mascotas/index.html
+++ b/secciones/portfolio/retratos/mascotas/index.html
@@ -22,7 +22,7 @@
     
     <nav class="navbar-dark navbar-expand-lg navbar fixed" style="background-color: #783172; letter-spacing: 1pt; font-weight: bold;" aria-label="Tenth navbar example">
       <div class="container-fluid">
-        <button class="navbar-togglert" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
   
