agregar subtitulos sección mascotas

--- a/secciones/portfolio/retratos/autorretratos/index.html
+++ b/secciones/portfolio/retratos/autorretratos/index.html
@@ -58,8 +58,8 @@
     <br>
     <br>
 
-    <h2 class="titulo-principal">Autorretratos</h2>  
-    
+    <h2 class="titulo-principal">RETRATOS</h2>  
+    <h3 class="titulo-de-obra">Autorretratos</h3>
  
   
     <div class="container">
