--- a/secciones/portfolio/retratos/index.html
+++ b/secciones/portfolio/retratos/index.html
@@ -68,7 +68,7 @@
                     <img src="https://i.ibb.co/9p6Q5Zr/autorretrato-caratula.jpg" alt="Autorretrato" class="card-img-top">
                 </a>
                 <div class="card-body" style="background-color: #783172; opacity: 65%;">
-                <h5 class="card-title">Autorretrato</h5>
+                <h5 class="card-title">Autorretratos</h5>
                 </div>
             </div>
             </div>
