--- a/secciones/portfolio/retratos/mascotas/index.html
+++ b/secciones/portfolio/retratos/mascotas/index.html
@@ -57,9 +57,9 @@
 
     <br>
     <br>
-
-    <h2 class="titulo-principal">Mis Mascotas</h2>  
-    
+ 
+    <h2 class="titulo-principal">RETRATOS</h2>  
+    <h3 class="titulo-de-obra">Mis Mascotas</h3>
   
     <div class="container">
       <hr>
