--- a/secciones/portfolio/retratos/sayiylucila/index.html
+++ b/secciones/portfolio/retratos/sayiylucila/index.html
@@ -58,7 +58,8 @@
     <br>
     <br>
 
-    <h2 class="titulo-principal">Sayi y Lucila</h2>  
+    <h2 class="titulo-principal">RETRATOS</h2>  
+    <h3 class="titulo-de-obra">Sayi y Lucila</h3>
  
   
     <div class="container">
