corrección detalles finales

--- a/secciones/portfolio/producto/telares/index.html
+++ b/secciones/portfolio/producto/telares/index.html
@@ -22,7 +22,7 @@
     
     <nav class="navbar-dark navbar-expand-lg navbar fixed" style="background-color: #783172; letter-spacing: 1pt; font-weight: bold;" aria-label="Tenth navbar example">
       <div class="container-fluid">
-        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
   
@@ -39,12 +39,12 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: #783172;">
                 <li><a class="dropdown-item" style="color: #FFF" href="../../../portfolio/documental/index.html">Documental</a></li>
-                <li><a class="dropdown-item" style="color: #FFF" href="../../../portfolio/eventos/index.html">Eventos</a></li>
                 <li><a class="dropdown-item" style="color: #FFF" href="../../../portfolio/deportiva/index.html">Fotografía Deportiva</a></li>
                 <li><a class="dropdown-item" style="color: #FFF" href="../../../portfolio/producto/index.html">Fotografía de Producto</a></li>
                 <li><a class="dropdown-item" style="color: #FFF" href="../../../portfolio/teatro/index.html">Fotografía de Teatro</a></li>
                 <li><a class="dropdown-item" style="color: #FFF" href="../../../portfolio/fotoperiodismo/index.html">Fotoperiodismo</a></li>
                 <li><a class="dropdown-item" style="color: #FFF" href="../../../portfolio/retratos/index.html">Retratos</a></li>
+                <li><a class="dropdown-item" style="color: #FFF" href="../../../portfolio/eventos/index.html">Eventos</a></li>
               </ul>
               </li>
               <li class="nav-item"><a href="../../../contacto/index.html" class="nav-link" style="color: #FFF;">CONTACTO</a></li>
