--- a/secciones/portfolio/retratos/retratos/index.html
+++ b/secciones/portfolio/retratos/retratos/index.html
@@ -58,7 +58,8 @@
     <br>
     <br>
 
-    <h2 class="titulo-principal">Retratos</h2>  
+    <h2 class="titulo-principal">RETRATOS</h2>  
+    <h3 class="titulo-de-obra">Retratos</h3>
 
   
     <div class="container">
