--- a/secciones/portfolio/eventos/index.html
+++ b/secciones/portfolio/eventos/index.html
@@ -70,22 +70,21 @@
 
 
     <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-          <div class="col-md-4 d-flex align-items-center">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-            </a>
-            <span style="color: #FFF;">&copy; 2022 Irene Faraci Fotografía</span>
-          </div>
-      
-          <ul class="nav col-md-4 justify-content-end d-flex">
-            <a class= "icono" href="mailto:irenfaraci@gmail.com"><img class="icono-img" src="../../../imagenes/mail-01.svg" alt="mail"></a>
-            <a class= "icono" href="https://wa.me/5491135731697/?text=Hola%20Iren!%20Quisiera%20consultarte%20por" target="_blank"><img class="icono-img" src="../../../imagenes/whatsapp-01.svg" alt="whatsapp"></a>
-            <a class= "icono" href="https://www.instagram.com/irenfaraci/?hl=es" target="_blank"><img class="icono-img" src="../../../imagenes/instagram-01.svg" alt="instagram"></a>
-            <a class= "icono" href="https://www.linkedin.com/in/irene-faraci-b03a43224" target="_blank"><img class="icono-img" src="../../../imagenes/linkedin-01.svg" alt="linkedin"></a>
-          </ul>
-        </footer>
-      </div>
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+          <span class="copyright" style="color: #FFF;">&copy; 2022 Irene Faraci Fotografía</span>
+        </div>
+    
+        <ul class="nav col-md-4 justify-content-end d-flex">
+          <a class= "icono" href="mailto:irenfaraci@gmail.com"><img class="icono-img" src="../../../imagenes/mail-01.svg" alt="mail"></a>
+          <a class= "icono" href="https://wa.me/5491135731697/?text=Hola%20Iren!%20Quisiera%20consultarte%20por" target="_blank"><img class="icono-img" src="../../../imagenes/whatsapp-01.svg" alt="whatsapp"></a>
+          <a class= "icono" href="https://www.instagram.com/irenfaraci/?hl=es" target="_blank"><img class="icono-img" src="../../../imagenes/instagram-01.svg" alt="instagram"></a>
+          <a class= "icono" href="https://www.linkedin.com/in/irene-faraci-b03a43224" target="_blank"><img class="icono-img" src="../../../imagenes/linkedin-01.svg" alt="linkedin"></a>      
+        </ul>
+
+      </footer>
+  </div>
+
 
 
 
