correcciones versión tablet

--- a/secciones/portfolio/eventos/index.html
+++ b/secciones/portfolio/eventos/index.html
@@ -60,7 +60,7 @@
 
     <h2 class="titulo-principal">Eventos</h2>  
 
-    <h3 class="destacados-titulo">PRÓXIMAMENTE</h3>>
+    <h3 class="destacados-titulo">PRÓXIMAMENTE</h3>
   
    
 
