sección retratos romina

--- a/secciones/portfolio/retratos/index.html
+++ b/secciones/portfolio/retratos/index.html
@@ -93,15 +93,25 @@
             </div>
             </div>
             <div class="col">
-                <div class="card">
-                    <a href="sayiylucila/index.html">
-                        <img src="https://i.ibb.co/ZTZ5Wz9/sayiylucila-caratula.jpg" alt="Sayi y Lucila" class="card-img-top">
-                    </a>
-                    <div class="card-body" style="background-color: #783172; opacity: 65%;">
-                    <h5 class="card-title">Sayi y Lucila</h5>
-                    </div>
+            <div class="card">
+                <a href="sayiylucila/index.html">
+                    <img src="https://i.ibb.co/ZTZ5Wz9/sayiylucila-caratula.jpg" alt="Sayi y Lucila" class="card-img-top">
+                </a>
+                <div class="card-body" style="background-color: #783172; opacity: 65%;">
+                <h5 class="card-title">Sayi y Lucila</h5>
                 </div>
-                </div>
+            </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                  <a href="romina/index.html">
+                      <img src="https://i.ibb.co/K07pDv4/caratula.jpg" alt="Sayi y Lucila" class="card-img-top">
+                  </a>
+                  <div class="card-body" style="background-color: #783172; opacity: 65%;">
+                  <h5 class="card-title">Romina</h5>
+                  </div>
+              </div>
+              </div>
         </div>
     </div>
   
